--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -1,7 +1,20 @@
+<!--
+{% extends 'base.html' %}
 
-<html>
+{% block body %}
+-->
+
+<div class ="header">
     <h2>Gowri's movie ratings app</h2>
+    <p>
+</div>
+
+<div class = "container">
     {% for user in users %}
-       <h2> User  {{ user.user_id }}, age {{ user.age }} has {{ user.rating|length}} ratings</h2>
+       <h5> User  {{ user.user_id }}, age {{ user.age }} has {{ user.rating|length}} ratings</h5>
     {% endfor %}
-</html>
+
+</div>
+<!--
+{% endblock %}
+-->
