--- a/templates/base.html
+++ b/templates/base.html
@@ -4,13 +4,12 @@
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine">
     <style>
         header {
-            font-family: 'Tangerine', serif;
+            font-family: 'Kranky', serif;
             font-size: 48px
         }
     </style>
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     
-    <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}" type="text/javascript"></script>
+<!--     // <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}" type="text/javascript"></script> -->
   </head>
   <header>
     {% block header %}{% endblock %}
