added show all users link

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,13 @@
                 <input class="btn" type="submit" value="Add User" />
             </form>
         </div>
-
+<div class = "container">
+    <a href="/users" class="url fn" itemprop="url">
+        <span>
+        SHOW FULL LIST OF USERS IN THE SYSTEM
+        </span>
+    </a>
+</div>
         <div class="span8">
 
                 <div class="user">
