--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,29 @@
 <html> 
   <head>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Kranky">
     <style>
+      /*comment here */
+        a {
+          color: red;
+          font-family: 'Kranky', sans-serif;
+
+        }
+        a.not-purple {
+          color: red;
+        }
+
+        .header {
+          font-size: 48px; 
+          color: red;
+          font-family: 'Kranky', sans-serif;
+        }
+
+        #header {
+
+        }
         header {
-            font-family: 'Kranky', serif;
+            font-family: 'Tangerine', serif;
             font-size: 48px
         }
     </style>
@@ -17,5 +37,7 @@
   <body>
     {% block body %}{% endblock %}
   </body>
+
+
 </html>
 
