--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
                    {% for user in users %}
                         <h5> User  {{ user.user_id }}, 
                             age {{ user.age }} 
-                            has {{ user.rating|length}} ratings
+                            has {{ user.rating|count}} ratings
                         </h5>
                     {% endfor %}
                 </div>
