still can't get count right

--- a/templates/users.html
+++ b/templates/users.html
@@ -15,7 +15,7 @@
                                 User  {{ user.user_id }}
                             </a>, 
                                 age {{ user.age }} 
-                                has {{ user.rating|length}} ratings
+                                has {{ ratings.rating|length}} ratings
                         </h5>
                     {% endfor %}
                 </div>
