--- a/templates/user_ratings.html
+++ b/templates/user_ratings.html
@@ -19,7 +19,7 @@
                               {% for rating in ratings_list %}
                          <tr><h5>
                             <td>{{rating.movie_id}}</td>  
-                            <td>"na"</td>  
+                            <td>{{rating.movie.name}}</td>  
                             <td>{{rating.rating}}</td>
                         </tr></h5>
                             {% endfor %}
