added login field

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,19 @@
         <div class="span12">
             <h1 class="header">Gowri's Movie Ratings App</h1>
         </div>
+        <div class="span3">
+            <h3><i img="icon-plus-sign.jpg"></i>Login</h3>
+            <form action="/login">
+                <input type="text" name="user_id" placeholder="User ID" />
+                <br />
+                <input type="text" name="password" placeholder="password" />
+                <br />
+                <input class="btn" type="submit" value="Log in" />
+            </form>
+        </div>
+
         <div class="span4">
-            <h3><i class="icon-plus-sign"></i> Add User</h3>
+            <h3><i img="icon-plus-sign.jpg"></i> Add User</h3>
             <form action="/add_user">
                 <input type="text" name="age" placeholder="Age" />
                 <br />
