added new logic

--- a/templates/loggedin.html
+++ b/templates/loggedin.html
@@ -3,6 +3,13 @@
 <div class ="header", style="font-family: 'Tangerine', serif; font-size:36px;">
     <h2>Logged in as User #: {{user_id}}</h2>
     <p>
+</div>
+<div class = "container">
+    <a href="/add_rating" class="url fn" itemprop="url" rel="author">
+        <span itemprop="title">
+        RATE ANOTHER MOVIE
+        </span>
+    <h4 class="container">
     <h5>Your ratings</h5>
     <p>
 </div>
