--- a/templates/loggedin.html
+++ b/templates/loggedin.html
@@ -29,7 +29,7 @@
                          <tr><h5>
                             <td>{{rating.movie_id}}</td>  
                             <td>{{rating.movie.name}}</td>  
-                            <td><a href=/change_rating?movie_id={{rating.movie_id}}>{{rating.rating}}</td></a>
+                            <td><a href="/change_rating?rating_id={{rating.id}}">{{rating.rating}}</a></td>
                         </tr></h5>
                             {% endfor %}
  
