--- a/templates/rating_added.html
+++ b/templates/rating_added.html
@@ -15,10 +15,10 @@
         <th>Rating</th>
     </tr></h3>
      <tr><h5>
-        <td>{{rating.user_id}}</td>
-        <td>{{rating.movie_id}}</td>  
-        <td>{{rating.movie.name}}</td>  
-        <td>{{rating.rating}}</td>
+        <td>{{user_id}}</td>
+        <td>{{movie_id}}</td>  
+        <td>{{movie.name}}</td>  
+        <td>{{rating}}</td>
     </tr></h5>
 
 </div>
